syntax = "proto3";

package openinventorymanager;

// go_package = "<module-name>/<relative-folder>;packageName"
option go_package = "openinventorymanager/protos/openinventorymanager;openinventorymanager";


// Service definition
service InventoryManager {
  rpc CreateItem (ItemInput) returns (ItemOutput);
  rpc GetItem (GetItemRequest) returns (ItemOutput);
  rpc ListItems (ListItemsRequest) returns (ListItemsResponse);
}

// Request message for creating an item
message ItemInput {
  string name = 1;                    // Item name
  string location = 2;                // Where itâ€™s stored
  string description = 3;             // Optional description
  repeated string tags = 4;           // Tags for categorization
  map<string, string> metadata = 5;   // Arbitrary key-value metadata
}

// Request message for fetching a single item
message GetItemRequest {
  string id = 1; // Unique item ID
}

// Request for listing multiple items
message ListItemsRequest {
  int32 page = 1;      // Optional paging
  int32 page_size = 2; // Optional paging
}

// Output message for a single item
message ItemOutput {
  string id = 1;                          // Unique item ID
  string name = 2;
  string location = 3;
  string description = 4;
  repeated string tags = 5;
  map<string, string> metadata = 6;
}

// Output message for listing multiple items
message ListItemsResponse {
  repeated ItemOutput items = 1;
}
